--- a/ScrambledPass/App.config
+++ b/ScrambledPass/App.config
@@ -1,6 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ScrambledPass.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <ScrambledPass.Properties.Settings>
+            <setting name="languageID" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="lastWordList" serializeAs="String">
+                <value />
+            </setting>
+        </ScrambledPass.Properties.Settings>
+    </userSettings>
 </configuration>
