--- a/ScrambledPass/App.config
+++ b/ScrambledPass/App.config
@@ -16,6 +16,15 @@
             <setting name="lastWordList" serializeAs="String">
                 <value />
             </setting>
+            <setting name="rememberLastWordList" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="defWordCount" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="defCharCount" serializeAs="String">
+                <value>5</value>
+            </setting>
         </ScrambledPass.Properties.Settings>
     </userSettings>
 </configuration>
