Clipboard clearing + refactoring
- moved settings loading to earlier in app startup
- added (optional) clipboard clearing, configurable in settings
- fixed settings fields not updating to configured state on startup
- fixed app window not resizing to content
- fixed missing tooltips
- fixed missing errors
- general refactoring

--- a/ScrambledPass/ScrambledPass.csproj
+++ b/ScrambledPass/ScrambledPass.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Interfaces\IPageViewModel.cs" />
     <Compile Include="Logic\ErrorHandler.cs" />
     <Compile Include="Logic\FileOperations.cs" />
+    <Compile Include="Helpers\GeneralHelpers.cs" />
     <Compile Include="Models\ApplicationViewModel.cs" />
     <Compile Include="Views\GeneratorView.xaml.cs">
       <DependentUpon>GeneratorView.xaml</DependentUpon>
