--- a/ScrambledPass.ConsoleApp/ScrambledPass.ConsoleApp.csproj
+++ b/ScrambledPass.ConsoleApp/ScrambledPass.ConsoleApp.csproj
@@ -1,11 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
   <ItemGroup>
-    <EmbeddedResource Include="defaultWordList.txt" />
+    <ProjectReference Include="..\ScrambledPass\ScrambledPass.csproj" />
   </ItemGroup>
 </Project>
