--- a/ScrambledPass/ScrambledPass.csproj
+++ b/ScrambledPass/ScrambledPass.csproj
@@ -7,5 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="defaultWordList.txt" />
+    <EmbeddedResource Include="defaultConfig.xml" />
   </ItemGroup>
 </Project>
